# dev_ws

./: README_EN.md  README_cn.md
src/cockpit_feedback/: package.xml  setup.cfg  setup.py
src/cockpit_feedback/cockpit_feedback/: race_status_display.py  scene_vlm_client.py
src/img_to_model/: CMakeLists.txt  package.xml
src/img_to_model/src/: img_to_model.cpp
src/origincar/origincar_bringup/launch/: usb_websocket_display.launch.py
src/origincar_v2_bridge/: package.xml  setup.cfg  setup.py
src/origincar_v2_bridge/config/: lslidar_lsn10.yaml
src/origincar_v2_bridge/launch/: akm_fusion.launch.py  hybrid_nav.launch.py  hybrid_nav_lidar.launch.py  lslidar_uart.launch.py  waypoint_nav.launch.py
src/origincar_v2_bridge/origincar_v2_bridge/: nonholonomic_node.py  qr_announcer_node.py  v2_protocol_parser.py  v2_serial_node.py  waypoint_nav_node.py  zupt_monitor.py
src/qrcode/: CMakeLists.txt  package.xml
src/qrcode/src/: qrcode.cpp
src/racing_control/: CMakeLists.txt  package.xml
src/racing_control/launch/: racing_control.launch.py
src/racing_control/src/: control_master.cpp  racing_control.cpp
src/racing_obstacle_detection_yolo/: CMakeLists.txt
src/racing_obstacle_detection_yolo/config/: yolov5sconfig.json
src/racing_obstacle_detection_yolo/include/racing_obstacle_detection/: parser.h
src/racing_obstacle_detection_yolo/launch/: racing_obstacle_detection_yolo.launch.py
src/racing_obstacle_detection_yolo/src/: parser.cpp  sample.cpp
src/racing_track_detection_resnet/: CMakeLists.txt
src/racing_track_detection_resnet/launch/: racing_track_detection_resnet.launch.py
src/racing_track_detection_resnet/src/: racing_track_detection.cpp
src/vision_language_model/: package.xml  setup.cfg  setup.py
src/vision_language_model/vision_language_model/: vision_language_model.py
src/vision_roi_tools/: CMakeLists.txt  package.xml
src/vision_roi_tools/src/: person_image_cropper.cpp  roi_qr_reader.cpp
