<?xml version="1.0"?>
<package format="3">
  <name>img_to_model</name>
  <version>0.0.0</version>
  <description>QR Code Detection Node</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>std_msgs</depend>
  <depend>hbm_img_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>