<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origincar_v2_bridge</name>
  <version>1.0.0</version>
  <description>V2 protocol bridge for OriginCar Ackermann + RDK X5 (serial, IMU, odometry, EKF fusion)</description>
  <maintainer email="dev@origincar.local">origincar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>vision_roi_tools</exec_depend>
  <exec_depend>cockpit_feedback</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
