<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_roi_tools</name>
  <version>1.0.0</version>
  <description>ROI-based QR decoding and person image cropping tools for the hybrid navigation stack.</description>
  <maintainer email="dev@origincar.local">origincar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ai_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>opencv</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>zbar</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
